# asterx_driver

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  config.example.yaml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
Docker/: Dockerfile  docker-compose.yml
cmake/: CompilerWarnings.cmake  Sanitizers.cmake
docs/: ARCH.md  dual-antenna-report.md
docs/architecture/: 00-requirements.md  03-sbf-parser-design.md
include/asterx/: byte_view.hpp
scripts/: parser.py  split_recording.py
src/: CMakeLists.txt  app_config.cpp  app_config.hpp  main.cpp  receiver_config.cpp  receiver_config.hpp  sbf_recorder.cpp  sbf_recorder.hpp  tcp_client.cpp  tcp_client.hpp
src/ntrip/: ins401_ntrip_client.cpp  ins401_ntrip_client.h
src/sbf/: crc16_xmodem.cpp  crc16_xmodem.hpp  frame_sync.cpp  frame_sync.hpp
tests/: CMakeLists.txt  test_app_config.cpp  test_crc16_xmodem.cpp  test_receiver_config.cpp
tests/fixtures/: .gitkeep
tests/unit/sbf/: CMakeLists.txt  test_frame_sync.cpp
